# SorghumVoxelCarving

./: README.md  SorghumReconstruction.sln  SorghumReconstruction.sln.DotSettings
Segmentation/: .gitignore  Dataset.py  Images.py  Loss.py  Readme.md  TensorBoardImageCallback.py  segment.py  train.py
Segmentation/working_models/: sorghum_segmentation_model_cnn715_2000_epochs.h5
Skeletonization/: CMakeLists.txt  criticalKernelsThinning3D.cpp
SorghumReconstruction/: AABB.cpp  AABB.h  AbstractSkeletonBranchClassifier.cpp  AbstractSkeletonBranchClassifier.h  Calibration.cpp  Calibration.h  Camera.cpp  Camera.h  ConsoleApplication.cpp  ConsoleApplication.h  CvSkeletonBranchClassifier.cpp  CvSkeletonBranchClassifier.h  Cylinder.cpp  Cylinder.h  Interpolation.cpp  Interpolation.h  IoUtils.cpp  IoUtils.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  MathUtils.cpp  MathUtils.h  MeshObject.cpp  MeshObject.h  OBJReader.cpp  OBJReader.h  OBJWriter.cpp  OBJWriter.h  PhysicalCamera.cpp  PhysicalCamera.h  Reconstruction.cpp  Reconstruction.h  Renderable.cpp  Renderable.h  Skeletons.cpp  Skeletons.h  SorghumReconstruction.vcxproj  SorghumReconstruction.vcxproj.filters  (+19 more)
SorghumReconstruction/Shaders/: bezier_spline_fs.glsl  bezier_spline_tcs.glsl  bezier_spline_tes.glsl  bezier_spline_vs.glsl  bezier_surface_fs.glsl  bezier_surface_tcs.glsl  bezier_surface_tes.glsl  bezier_surface_vs.glsl  cylinder_fs.glsl  mesh_vs.glsl  (+7 more)
scripts/: Readme.md  calibrate.sh  dumpPlant.sh  measure.sh  measureSkeletons.sh  plants.txt  reconstruct.sh  segment.sh  setup.sh  skeletonize.sh
(+199 files in other folders)
